# nfs-underground-2-server-emulator

./: NFSOR_Custom.7z  README.md  quick_build.bat
OLD_UDP_VERSION/: CMakeLists.txt  NFSOR_Custom.asi  README.md
OLD_UDP_VERSION/server/src/: config.js  index.js
OLD_UDP_VERSION/server/src/database/: index.js
OLD_UDP_VERSION/server/src/game/: games.js
OLD_UDP_VERSION/server/src/handlers/: auth.js  game.js  lobby.js
OLD_UDP_VERSION/server/src/servers/: tcp.js  udp.js
OLD_UDP_VERSION/server/src/utils/: protocol.js
OLD_UDP_VERSION/src/: config.h  hooks.h  logger.h  pattern_scanner.h  patterns.h
server/: CMakeLists.txt  package.json  start.bat
server/data/: users.json
server/src/: config.js
server/src/database/: index.js
server/src/game/: rooms.js
server/src/servers/: http.js  tcp.js  udp.js
server/src/utils/: ea_protocol.js  logger.js
src/: config.h  dllmain.cpp  hooks.h  memory.h  patches.h
